Fix discover card layout so buttons align consistently
Use flex-grow on text area and margin-top:auto on button to
anchor it to the bottom of each card regardless of content length.
Remove hacky margin-top overrides from media queries.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -151,8 +151,8 @@ main {
   height: 50vh;
   margin: 1rem;
   max-width: 300px;
-  flex-wrap: wrap;
   border-radius: 10%;
+  overflow: hidden;
 }
 
 .discoverCard img{
@@ -174,12 +174,14 @@ main {
 }
 
 .cardTextcnt{
-  margin: 0px 20px 0px 20px ;
-  height: 5rem;
+  margin: 0px 20px 0px 20px;
+  flex-grow: 1;
 }
 
 .cardBtn{
+  margin-top: auto;
   margin-bottom: 10px;
+  padding: 0 20px;
 }
 
 /* Reservation Section */
@@ -397,10 +399,6 @@ main {
     margin: 10px 5%;
   }
 
-  .cardBtn{
-    margin-top: 1vh;
-  }
-
   }
 
 
@@ -440,9 +438,6 @@ main {
     margin-left: 25px;
   }
   
-  .cardBtn{
-    margin-top: 20%;
-  }
 
 /*reservation*/
 
@@ -495,9 +490,6 @@ main {
     margin-left: 15%;
   }
   
-  .cardBtn{
-    margin-top: -9rem;
-  }
 }
 @media screen and (max-width: 450px){
   .discoverCard{
@@ -509,9 +501,6 @@ main {
     height: 25%;
     min-height: 350px;
 
-  }
-  .cardBtn {
-    margin-top: 5%;
   }
 }
 
